--- a/src/components/MatchCard/MatchCard.css
+++ b/src/components/MatchCard/MatchCard.css
@@ -2,7 +2,8 @@
     margin-bottom: 40px;
 }
 
-/* .CoasterCard img {
-    height: 200px;
+.MatchCard img {
+    height: 350px;
     object-fit: cover;
-} */
+
+}
