--- a/src/components/BoardgameCard/BoardgameCard.css
+++ b/src/components/BoardgameCard/BoardgameCard.css
@@ -1,9 +1,92 @@
-.BoardgameCard {
+/* .BoardgameCardCarrousel {
     margin-bottom: 40px;
 }
 
-.BoardgameCard img {
+.BoardgameCardCarrousel img {
     height: 350px;
     object-fit: cover;
 
+} */
+
+.LinkBoardGame {
+    color: black;
+}
+
+.BoardgameCard {
+    width: 400px;
+    height: 500px;
+    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all 120ms;
+    display: flex;
+    background: #fff;
+    padding: 1em;
+    padding-bottom: 3.4em;
+    align-content: space-between;
+    margin: 10px;
+}
+
+.card::after {
+    content: "Details";
+    padding-top: 0.5em;
+    padding-left: 1.25em;
+    position: absolute;
+    left: 0;
+    bottom: -60px;
+    background: #003cff;
+    color: #fff;
+    height: 2.5em;
+    width: 100%;
+    transition: all 80ms;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 0.1em;
+}
+
+.card .text-title {
+    font-family: 'Rubik Mono One',
+        sans-serif;
+    justify-content: left;
+    padding-right: 2em;
+    left: 1em;
+    font-size: 1.6em;
+    bottom: 1.875em;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-top: 10px;
+    color: black;
+
+}
+
+.card .Details {
+    font-family: 'Rubik Mono One',
+        sans-serif;
+    font-size: 0.8em;
+    bottom: 0.25em;
+    text-transform: uppercase;
+}
+
+.card:hover::after {
+    bottom: 0;
+}
+
+.card:active {
+    transform: scale(0.98);
+}
+
+.card:active::after {
+    height: 3.125em;
+}
+
+.text {
+    max-width: 100px;
+}
+
+.image {
+    background: rgb(241, 241, 241);
+    width: 100%;
+    height: 80%;
+    display: grid;
+    place-items: center;
+    object-fit: cover;
 }
