--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -3,14 +3,70 @@
     margin-right: 10px;
 }
 
-.search {
+/* .search {
     color: black;
 }
 
-.searchbox {
+
+
+/* a {
+    text-decoration: none;
+} */
+*/
+/* .searchbox {
     margin-bottom: 20px;
+} */
+
+.group {
+    display: flex;
+    line-height: 28px;
+    align-items: center;
+    position: relative;
+    max-width: 190px;
+}
+
+.searchbar {
+    margin: 30px 8px 30px 8px;
+}
+
+.input {
+    width: 100%;
+    height: 40px;
+    line-height: 28px;
+    padding: 0 1rem;
+    padding-left: 2.5rem;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    outline: none;
+    background-color: #f3f3f4;
+    color: #0d0c22;
+    transition: .3s ease;
 }
 
 a {
     text-decoration: none;
+}
+
+.search {
+    color: black;
+}
+
+.input::placeholder {
+    color: #9e9ea7;
+}
+
+.input:focus,
+input:hover {
+    outline: none;
+    border-color: #003cff;
+    background-color: #fff;
+    box-shadow: 0 0 0 4px #92acff60;
+}
+
+.icon {
+    position: absolute;
+    left: 1rem;
+    fill: #9e9ea7;
+    width: 1rem;
+    height: 1rem;
 }
