--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-body {
-    font-family: sans-serif;
-    font-weight: 300;
-}
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Modak&display=swap');
+
+
