--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Modak&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Modak&family=Open+Sans&display=swap');
