--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,8 +3,7 @@
 }
 
 .Navbar2 {
-    font-family: 'Helvetica',
-        sans-serif;
+    font-family: 'Open Sans', sans-serif;
     display: flex;
 }
 
