--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -30,6 +30,8 @@
 }
 
 .input {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
     width: 100%;
     height: 40px;
     line-height: 28px;
@@ -39,7 +41,7 @@
     border-radius: 8px;
     outline: none;
     background-color: #f3f3f4;
-    color: #0d0c22;
+    color: #f3f3f4;
     transition: .3s ease;
 }
 
@@ -48,25 +50,19 @@ a {
 }
 
 .search {
-    color: black;
+    color: #003cff;
 }
 
 .input::placeholder {
-    color: #9e9ea7;
+    color: #ffffff;
 }
 
 .input:focus,
 input:hover {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
     outline: none;
-    border-color: #003cff;
-    background-color: #fff;
-    box-shadow: 0 0 0 4px #92acff60;
-}
-
-.icon {
-    position: absolute;
-    left: 1rem;
-    fill: #9e9ea7;
-    width: 1rem;
-    height: 1rem;
+    border-color: #000000;
+    background-color: #003cff8b;
+    box-shadow: 0 0 0 2px #003cff;
 }
