--- a/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
+++ b/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
@@ -2,6 +2,7 @@
     border: 7px solid #d44731;
     border-radius: 8px;
     margin-top: 30px;
+    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2);
 }
 
 .gameDetailsName {
@@ -13,7 +14,9 @@
 }
 
 .gameDetailsDetails {
-    padding: 80px;
+    padding-top: 30px;
+    padding-left: 60px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .btnReturn {
@@ -28,7 +31,64 @@
     align-content: space-between;
 }
 
-.btnLikeDislike {
-display: flex;
+.imageDetails {
+    padding-left: 60px;
+    padding-top: 30px;
+}
 
+.btnLikeDislike {
+    display: flex;
+}
+
+.btnLike {
+    margin: 10px;
+}
+
+.btnDislike {
+    margin: 10px;
+}
+
+.hrDetails {
+    color: #d44731;
+    height: 4px;
+}
+
+.Comments {
+    border: 7px solid #d44731;
+    border-radius: 8px;
+    margin-top: 30px;
+    padding: 30px;
+    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2);
+}
+
+.ButtonsDetails {
+    padding: 30px;
+}
+
+.ButtonsBack {
+    display: flex;
+    align-content: space-between;
+}
+
+.btnDetails {
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.btnDelete {
+    margin-top: 30px;
+}
+
+.Comments {
+    border: 7px solid #d44731;
+    border-radius: 20px;
+    margin-top: 30px;
+    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2);
+}
+
+.CreateComment {
+    border: 7px solid #d44731;
+    border-radius: 20px;
+    margin-top: 30px;
+    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2);
 }
