--- a/src/components/BoardgameCard/BoardgameCard.css
+++ b/src/components/BoardgameCard/BoardgameCard.css
@@ -54,7 +54,6 @@
     text-transform: uppercase;
     margin-top: 10px;
     color: black;
-
 }
 
 .BoardgameCardList .Details {
@@ -82,8 +81,8 @@
 
 .imageList {
     background: rgb(241, 241, 241);
-    width: 100%;
-    height: 80%;
+    width: 365px;
+    height: 200px;
     display: grid;
     place-items: center;
     object-fit: cover;
