--- a/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
+++ b/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
@@ -87,8 +87,9 @@
 }
 
 .CreateComment {
-    border: 7px solid #d44731;
+    margin-left: 200px;
+    /* border: 7px solid #d44731;
     border-radius: 20px;
     margin-top: 30px;
-    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2); */
 }
