--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,21 +1,16 @@
 .search img {
-    width: 50px;
+    width: 80px;
     margin-right: 10px;
+    padding: 10px;
 }
 
-/* .search {
-    color: black;
+.Search {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    border: 1px solid #003cff;
+    border-radius: 6px;
+    margin: 10px;
 }
-
-
-
-/* a {
-    text-decoration: none;
-} */
-*/
-/* .searchbox {
-    margin-bottom: 20px;
-} */
 
 .group {
     display: flex;
@@ -32,7 +27,7 @@
 .inputBoardGame {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
-    width: 100%;
+    width: 1255px;
     height: 40px;
     line-height: 28px;
     padding: 0 1rem;
@@ -50,7 +45,7 @@ a {
 }
 
 .search {
-    color: #003cff;
+    color: black;
 }
 
 .inputBoardGame::placeholder {
@@ -63,6 +58,7 @@ inputBoardGame:hover {
     font-weight: bold;
     outline: none;
     border-color: #000000;
-    background-color: #003cff8b;
+    background-color: #003cff4e;
+    ;
     box-shadow: 0 0 0 2px #003cff;
 }
