--- a/src/components/RentCard/RentCard.css
+++ b/src/components/RentCard/RentCard.css
@@ -1,5 +1,5 @@
 .Booking {
-    font-family: 'Modak',sans-serif;
+    font-family: 'Modak', sans-serif;
     font-size: 2em;
 }
 
@@ -9,4 +9,35 @@
 
 .ModalBooking .modal-content {
     background-color: #d44731;
+}
+
+.myContainerRent {
+    display: flex;
+    align-content: space-between;
+    padding-right: 30px;
+    border-radius: 8px;
+}
+
+.DetailsOwner {
+    padding: 30px;
+}
+
+.overlayImg {
+    height: 250px;
+    width: 500px;
+    border: 7px solid black;
+    border-radius: 20px;
+}
+
+.NameOwner {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.5em;
+    color: black;
+    font-weight: bolder;
+}
+
+.Dategame {
+    font-family: 'Open Sans', sans-serif, bold;
+    font-weight: bolder;
+    color: black;
 }
