--- a/src/pages/BoardgameListPage/BoardgameListPage.css
+++ b/src/pages/BoardgameListPage/BoardgameListPage.css
@@ -1,17 +1,21 @@
 .BoardgamesList {
     padding: 30px;
+    background-color: white;
+    border: 7px solid black;
+    border-radius: 20px;
 }
 
 .BoardgamesListTitle {
     font-family: 'Modak', sans-serif;
     color: black;
-    font-size: 4em;
-    padding-top: 20px;
+    font-size: 5em;
     padding-bottom: 20px;
 }
 
 .BoardgameListContainer {
     padding: 10px;
+    background-color: white;
+
 }
 
 .SearchBar {
@@ -20,6 +24,9 @@
     border: 4px solid #001eea;
     border-radius: 8px;
     margin-bottom: 20px;
+    background-color: white;
+    border: 7px solid black;
+    border-radius: 20px;
 }
 
 .SearchGames {
@@ -31,4 +38,9 @@
 .hrList {
     color: #001eea;
     height: 4px;
+}
+
+.BoardgameListContainer {
+    background-color: rgb(23, 74, 149);
+    padding-top: 20px;
 }
