--- a/src/pages/UserProfilePage/UserProfilePage.css
+++ b/src/pages/UserProfilePage/UserProfilePage.css
@@ -93,11 +93,11 @@
 }
 
 .ModalCreate {
-  background-color: #001fea4d;
+  background-color: #d4473144;
 }
 
 .ModalCreate .modal-content {
-  background-color: #001eea;
+  background-color: #d44731;
 }
 
 .CreateRent {
