--- a/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
+++ b/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
@@ -86,10 +86,16 @@
     box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2);
 }
 
-.CreateComment {
-    margin-left: 200px;
-    /* border: 7px solid #d44731;
-    border-radius: 20px;
+.CommentTitleForm {
+    margin-left: 13px;
     margin-top: 30px;
-    box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.2); */
+}
+
+.CommentsArea {
+    margin-left: 15px;
+}
+
+.Comment-btn {
+    margin-top: 20px;
+    margin-left: 10px;
 }
