--- a/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
+++ b/src/pages/BoardgameDetailsPage/BoardgameDetailsPage.css
@@ -42,6 +42,7 @@
 
 .btnLikeDislike {
     display: flex;
+    margin-left: 15px;
 }
 
 .btnLike {
@@ -72,7 +73,8 @@
 
 .ButtonsBack {
     display: flex;
-    align-content: space-between;
+    align-content: flex-end;
+    margin-left: 60px;
 }
 
 .btnDetails {
