--- a/src/pages/MatchListPage/MatchListPage.css
+++ b/src/pages/MatchListPage/MatchListPage.css
@@ -48,8 +48,7 @@
 }
 
 .CreateRent {
-    font-family: 'Modak',
-        sans-serif;
+    font-family: 'Modak',sans-serif;
     font-size: 3em;
 }
 
