--- a/src/pages/BoardgameListPage/BoardgameListPage.css
+++ b/src/pages/BoardgameListPage/BoardgameListPage.css
@@ -21,7 +21,7 @@
 .SearchBar {
     padding: 10px;
     box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.1);
-    border: 4px solid #001eea;
+    border: 4px solid rgb(23, 74, 149);
     border-radius: 8px;
     margin-bottom: 20px;
     background-color: white;
@@ -36,7 +36,7 @@
 }
 
 .hrList {
-    color: #001eea;
+    color: rgb(23, 74, 149);
     height: 4px;
 }
 
