--- a/src/pages/MatchDetailsPage/MatchDetailsPage.css
+++ b/src/pages/MatchDetailsPage/MatchDetailsPage.css
@@ -1,9 +1,10 @@
 .matchDetails {
     background-color: rgb(96, 239, 116);
+    border: 7px solid rgb(96, 239, 116);
     border-radius: 8px;
     margin-top: 30px;
     box-shadow: 0px 1px 13px rgba(96, 239, 115, 0.433);
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .matchDetailsTitle {
@@ -19,12 +20,19 @@
     padding-left: 60px;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.2em;
+    margin: 20px;
 }
 
 .MatchesImg {
     width: 500px;
     height: 400px;
     margin-left: 70px ;
+}
+
+.matchDetailsImg {
+    border: 7px solid black;
+    border-radius: 20px;
+    margin: 10px;
 }
 
 .MatchCol {
@@ -37,11 +45,14 @@
 }
 
 .playersMatch {
+    font-family: 'Open Sans', sans-serif, bold;
     border: 7px solid rgb(96, 239, 116);
+    background-color: rgb(96, 239, 116) ;
     width: 200px;
     height: 100px;
     border-radius: 8px;
-    margin-top: 30px;
+    margin-top: 10px;
+    margin-left: 15px;
     box-shadow: 0px 1px 13px rgba(96, 239, 115, 0.433);
     padding: 10px;
 }
@@ -59,4 +70,20 @@
 .mapMatch {
     border: 7px solid rgb(96, 239, 116);
     border-radius: 8px;
+    margin-bottom: 30px;
+}
+
+.containerPlayers{
+    background-color: white;
+    margin: 20px;
+    border: 5px solid rgb(96, 239, 116);
+    border-radius: 20px;
+    margin-bottom: 10px;
+    padding: 20px;
+}
+
+.TitleParticipants {
+    font-family: 'Modak', sans-serif;
+    padding: 10px;
+    font-size: 2em;
 }
