--- a/src/pages/AdminPage/AdminPage.css
+++ b/src/pages/AdminPage/AdminPage.css
@@ -25,3 +25,9 @@
         sans-serif;
     font-size: 3em;
 }
+
+.AdminButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
