conditional rendering and styling

--- a/src/pages/MatchDetailsPage/MatchDetailsPage.css
+++ b/src/pages/MatchDetailsPage/MatchDetailsPage.css
@@ -87,3 +87,13 @@
     padding: 10px;
     font-size: 2em;
 }
+
+.Buttons-right {
+    display: flex;
+    justify-content: end;
+    margin-left: 275px;
+}
+
+.ButtonsJoin {
+    margin-left: 65px;
+}
