--- a/src/components/BookingForm/BookingForm.css
+++ b/src/components/BookingForm/BookingForm.css
@@ -27,24 +27,30 @@
 } */
 
 .CalendarDay {
-    
+
     background-color: #d44731;
 }
 
 .CalendarMonth_caption {
     font-family: 'Modak', sans-serif;
     font-size: 2em;
+    padding-top: 70px;
 }
 
 .CalendarMonth_caption {
     font-weight: lighter;
+    padding-top: 90px;
 }
+/* 
+.DayPicker_weekHeader {
+    padding-top: 70px;
+} */
 
 .CalendarDay__blocked_calendar {
     background-color: #d447315a;
 }
 
-.DayPicker_transitionContainer{
+.DayPicker_transitionContainer {
     width: 20px;
     height: 20px;
 }
