--- a/src/components/UserList/UserList.css
+++ b/src/components/UserList/UserList.css
@@ -6,12 +6,15 @@
 
 .AdminUsersTitle {
     font-family: 'Modak', sans-serif;
-    font-size: 2em;
+    font-size: 3em;
 }
 
 .usersList {
     display: flex;
     margin-top: 10px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 .btn {
