--- a/src/pages/AdminPage/AdminPage.css
+++ b/src/pages/AdminPage/AdminPage.css
@@ -21,13 +21,80 @@
 }
 
 .CreateRent {
-    font-family: 'Modak',
-        sans-serif;
+    font-family: 'Modak', sans-serif;
     font-size: 3em;
+    color: black;
 }
 
 .AdminButtons {
-    display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 60px;
+    margin-left: 150px;
+}
+
+.AdminButtonsTitle {
+    font-family: 'Modak', sans-serif;
+    font-size: 3em;
+    display: flex;
+    justify-content: center;
+    padding-top: 90px;
+}
+
+.Userlist {
+    border: 7px solid black;
+    border-radius: 20px;
+    margin-right: 10px;
+    background-color: white;
+}
+
+.AdminPower {
+    border: 7px solid black;
+    border-radius: 20px;
+    margin-left: 10px;
+    background-color: white;
+}
+
+.UserlistRow {
+    padding-top: 30px;
+    padding-bottom: 420px;
+}
+
+.UserAdmin {
+    background-color: #d44731;
+}
+
+
+button {
+    /* Variables */
+    --button_radius: 0.75em;
+    --button_color: #e8e8e8;
+    --button_outline_color: #000000;
+    font-size: 17px;
+    font-weight: bold;
+    border: none;
+    border-radius: var(--button_radius);
+    background: var(--button_outline_color);
+}
+
+.button_top {
+    display: block;
+    box-sizing: border-box;
+    border: 2px solid var(--button_outline_color);
+    border-radius: var(--button_radius);
+    padding: 0.75em 1.5em;
+    background: var(--button_color);
+    color: var(--button_outline_color);
+    transform: translateY(-0.2em);
+    transition: transform 0.1s ease;
+}
+
+button:hover .button_top {
+    /* Pull the button upwards when hovered */
+    transform: translateY(-0.33em);
+}
+
+button:active .button_top {
+    /* Push the button downwards when pressed */
+    transform: translateY(0);
 }
