--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,5 +1,6 @@
 .BackgroundHome {
     padding-top: 30px;
+    padding-bottom: 50px;
 }
 
 .WelcomeHome {
@@ -30,4 +31,33 @@
 
 .btnCarrousel {
     background-color: #ccddc7;
+}
+
+.EventsHome {
+    padding: 50px;
+}
+
+.EventsTitle {
+    font-family: 'Modak', sans-serif;
+    color: black;
+    margin: 20px;
+    font-size: 6em;
+}
+
+.EventsCards {
+    width: 400px;
+    height: 150px;
+}
+
+.Events2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.EventsHomePadding {
+    margin-bottom: 50px;
+}
+
+.EventsHome {
+    margin-bottom: 50px;
 }
